--- a/schnupperlehre/app/Site2.html
+++ b/schnupperlehre/app/Site2.html
@@ -66,7 +66,7 @@
         <p><h1>Spezifikationen:</h1></p>
         <div class="Beschreibung"><ul><em>
             <li>Mechanik: Gold, Verriegelung</li>
-            <li>Form: Modernes C</li>
+            <li>Form: Modernes C</li> <li>Form: Modernes C</li>
             <li>Sattel: Knochen</li>
             <li>Anzahl der Bünde: 22</li>
             <li>Tonabnehmer: SSS Alnico V, Custom Modell</li>
