--- a/schnupperlehre/app/Site2.html
+++ b/schnupperlehre/app/Site2.html
@@ -42,7 +42,7 @@
 
 
         </style>
-         <a href="HauptSite.html"> <sl-button variant="default" outline>Home</sl-button></a>
+         <a href="index.html"> <sl-button variant="default" outline>Home</sl-button></a>
   </head>
   <body> 
     <h1 style="font-size:350%;">Electric guitar</h1>
