--- a/schnupperlehre/app/index.html
+++ b/schnupperlehre/app/index.html
@@ -41,7 +41,7 @@
 
     <div class="Oben">
 
-    <a href="Calculator.html"> <sl-button variant="danger" outline>Home</sl-button></a>
+    <a href="Calculator.html"> <sl-button variant="danger">Calculate!</sl-button></a>
     <sl-button variant="danger">All</sl-button>
     <sl-button variant="danger">Categories</sl-button>
     <sl-button variant="danger">Contact</sl-button>
