--- a/schnupperlehre/app/Calculator.html
+++ b/schnupperlehre/app/Calculator.html
@@ -88,7 +88,9 @@
       <sl-button onClick="deleteZahl()" variant="danger" outline>Delete</sl-button>
     </div>
   </div>
-  
+
+      <a href="index.html"> <sl-button variant="danger" size="large" style="width: 200%;">Home!</sl-button></a>
+
     <script>
       display = document.getElementById("display");
       function fügeZahlZumDisplayHinZu(zahl) {
